examples/datalog/29_temporal/12_lag_pattern.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_lag
Knowledge graph 'test_lag' created.
Switched to knowledge graph: test_lag
> .kg use test_lag
Switched to knowledge graph: test_lag
> +timeseries[(1, 10), (2, 15), (3, 12), (4, 20)].
Inserted 4 fact(s) into 'timeseries'.
> consecutive(T1, V1, T2, V2) :- timeseries(T1, V1), timeseries(T2, V2), T2 = T1 + 1.
Script error: Query execution failed: Unsupported comparison: Variable("T2") Equal Arithmetic(Binary { op: Add, left: Variable("T1"), right: Constant(1) })
