examples/datalog/29_temporal/12_lag_pattern.dl
% Test: Lag/previous value pattern
% Expected: Find previous value in sequence
% Category: 29_temporal
% Priority: P2 - Temporal patterns

.kg create test_lag
.kg use test_lag

+timeseries[(1, 10), (2, 15), (3, 12), (4, 20)].

% Find consecutive pairs (current and previous)
consecutive(T1, V1, T2, V2) :-
    timeseries(T1, V1),
    timeseries(T2, V2),
    T2 = T1 + 1.

?- consecutive(T1, V1, T2, V2).

.kg use default
.kg drop test_lag
